- Improve performance of MySqlHelper.EscapeString() (Bug#48243)
- Fix membership provider creation failure, when default database character set is different from latin1 (Bug #53174)
- Fix "Connection must be valid and open" exception When UpdateBatchSize > 1 
  and MySqlDataAdapter is not using an open connection (Bug #38411)
- Make sure MySqlDataAdapter.Update() works for custom stored procedure driven update commands 
  that make use of UpdateRowSource.FirstReturnedRecord (Bug#54895)
- Call DataTable.AcceptChanges() for affected tables at the end of MySqlAdapter.Update, 
  to match the documented IDataAdater behavior (bug#54863)
- Fix race condition (concurrent reading/modification of the same DataSet) in StoredProcedure.GetParameters()
  (bug#49118)
- Fix problems with MySqlDataAdapter insert command, when batch size is > 1, and 
  INSERT statement has expression with parentheses (e.g arithmetical expressions) (bug #54386)
- When command is killed, e.g as result of timeout, error code returned from server 
  is not necessarily 1317 (QueryInterrupted). It might as well be 1028 (FileSortAborted).
  Fix timeout handling to handle both error codes in the same fashion (bug #53357)
- added public MySqlHelper.ExecuteDataReader method that takes an external connection (bug #54570)
- applied patch from 5.x series that reset the connection to the base encoding when doing a 
  connection reset (bug #47153)
- changed DbCommandBuilder and added a MySqlDataObjectIdentifierConverter so we don't output
  the databasename in our typed datasets.  This allows users to move the dataset to a new
  database/server with no trouble (bug #33870)
- added code to default 'respect binary flags' in the visual studio wizard so that older
  versions of MySQL will work when creating/editing stored procedures (bug #55170)

Version 6.0.6
- When sending file to server (LOAD DATA INFILE) open the file for read only, not for read/write
 (bug #48944)